fixed sidecar injection
Signed-off-by: raffaelespazzoli <raffaele.spazzoli@gmail.com>

--- a/openshift/allow-apiserver-webhooks.yaml
+++ b/openshift/allow-apiserver-webhooks.yaml
@@ -15,4 +15,6 @@ spec:
   ingress:
     - ports:
       - port: 443
-        protocol: TCP                      
+        protocol: TCP   
+      - port: 8443
+        protocol: TCP                           
