--- a/openshift/allow-apiserver-webhooks.yaml
+++ b/openshift/allow-apiserver-webhooks.yaml
@@ -12,9 +12,12 @@ spec:
       - cache-server
       - seldon
       - katib-controller
+      - kfserving
   ingress:
     - ports:
       - port: 443
         protocol: TCP   
       - port: 8443
-        protocol: TCP                           
+        protocol: TCP 
+      - port: 9443
+        protocol: TCP                                  
