--- a/openshift/kubeflow-profile-namespace-config.yaml
+++ b/openshift/kubeflow-profile-namespace-config.yaml
@@ -34,6 +34,19 @@ spec:
       apiVersion: rbac.authorization.k8s.io/v1
       kind: RoleBinding
       metadata:
+        name: default-nonroot
+        namespace: {{ .Name }}
+      roleRef:
+        apiGroup: rbac.authorization.k8s.io
+        kind: ClusterRole
+        name: system:openshift:scc:nonroot
+      subjects:
+      - kind: ServiceAccount
+        name: default        
+  - objectTemplate: | 
+      apiVersion: rbac.authorization.k8s.io/v1
+      kind: RoleBinding
+      metadata:
         name: default-edit
         namespace: {{ .Name }}
       roleRef:
@@ -43,28 +56,28 @@ spec:
       subjects:
       - kind: ServiceAccount
         name: default        
-  - objectTemplate: | 
-      apiVersion: redhatcop.redhat.io/v1alpha1
-      kind: ResourceLocker
-      metadata:
-        name: sts-annotation
-        namespace: {{ .Name }}
-      spec:
-        serviceAccountRef:
-          name: default
-        patches:
-        - targetObjectRef:
-            apiVersion: v1
-            kind: ServiceAccount
-            name: default-editor
-            namespace: {{ .Name }}
-          patchTemplate: |
-            metadata:
-              annotations:
-                 eks.amazonaws.com/audience: "sts.amazonaws.com"
-                 eks.amazonaws.com/token-expiration: "86400"
-          patchType: application/strategic-merge-patch+json
-          id: default-editor-aws-access
+  # - objectTemplate: | 
+  #     apiVersion: redhatcop.redhat.io/v1alpha1
+  #     kind: ResourceLocker
+  #     metadata:
+  #       name: sts-annotation
+  #       namespace: {{ .Name }}
+  #     spec:
+  #       serviceAccountRef:
+  #         name: default
+  #       patches:
+  #       - targetObjectRef:
+  #           apiVersion: v1
+  #           kind: ServiceAccount
+  #           name: default-editor
+  #           namespace: {{ .Name }}
+  #         patchTemplate: |
+  #           metadata:
+  #             annotations:
+  #                eks.amazonaws.com/audience: "sts.amazonaws.com"
+  #                eks.amazonaws.com/token-expiration: "86400"
+  #         patchType: application/strategic-merge-patch+json
+  #         id: default-editor-aws-access
   - objectTemplate: |          
       apiVersion: v1
       kind: LimitRange
