--- a/openshift/sm_cp_patch.yaml
+++ b/openshift/sm_cp_patch.yaml
@@ -5,6 +5,10 @@ metadata:
 spec:
   version: v2.0
   proxy:
+    networking:
+      trafficControl:
+        outbound:
+          excludedIPRanges: [${allowed_cidrs_csv}]
     injection:
       autoInject: true
       neverInjectSelector:
