--- a/openshift/kubeflow-profile-creation.yaml
+++ b/openshift/kubeflow-profile-creation.yaml
@@ -35,4 +35,18 @@ spec:
       subjects:
       - kind: User
         apiGroup: rbac.authorization.k8s.io
-        name: {{ .Name }}            
+        name: {{ .Name }}  
+  - objectTemplate: | 
+      apiVersion: rbac.authorization.k8s.io/v1
+      kind: RoleBinding
+      metadata:
+        name: {{ .Name }}-sm-view
+        namespace: ${sm_cp_namespace}
+      roleRef:
+        apiGroup: rbac.authorization.k8s.io
+        kind: ClusterRole
+        name: view
+      subjects:
+      - kind: User
+        apiGroup: rbac.authorization.k8s.io
+        name: {{ .Name }}                   
