tested all previous working features
Signed-off-by: raffaelespazzoli <raffaele.spazzoli@gmail.com>

--- a/kubeflow1.3/kustomization.yaml
+++ b/kubeflow1.3/kustomization.yaml
@@ -64,3 +64,12 @@ resources:
 
 # User namespace
 # - https://github.com/kubeflow/manifests/common/user-namespace/base
+
+patches:
+  - path: ./kfserving-config-patch.yaml
+    target:
+      group: ""
+      version: v1
+      kind: ConfigMap
+      name: inferenceservice-config
+      namespace: kubeflow
