--- a/openshift/autoscaler.yaml
+++ b/openshift/autoscaler.yaml
@@ -13,6 +13,10 @@ spec:
     memory:
       min: 4 
       max: 512
+    gpus:
+    - type: nvidia.com/gpu 
+      min: 0 
+      max: 16      
   scaleDown: 
     enabled: true 
     delayAfterAdd: 10m 
