--- a/serving/kfserving/tensorflow/tf-inference.yaml
+++ b/serving/kfserving/tensorflow/tf-inference.yaml
@@ -2,6 +2,8 @@ apiVersion: "serving.kubeflow.org/v1alpha2"
 kind: "InferenceService"
 metadata:
   name: "flowers-sample"
+  annotations:
+    sidecar.istio.io/inject: "false"
 spec:
   default:
     predictor:
