update gpu process for helm

--- a/helm/autoscaler/templates/clusterpolicy-gpu-cluster-policy.yaml
+++ b/helm/autoscaler/templates/clusterpolicy-gpu-cluster-policy.yaml
@@ -14,9 +14,11 @@ spec:
     version: 'sha256:ced606933cd2210768ee8488b624c64ac0bdce6f05d9c4b4210e251370a14ff8'
     image: dcgm-exporter
     tolerations: 
+      {{- range .Values.cluster_policy.tolerations }}
       - key: workload
-        value: {{ .Values.cluster_policy.toleration.label }}
+        value: {{ .label }}
         effect: NoSchedule
+      {{- end }}
   devicePlugin:
     nodeSelector: {}
     imagePullSecrets: []
@@ -28,9 +30,11 @@ spec:
     version: 'sha256:ea353fe57628f4d3c3e1cda126455d02f2277e3ee92fa9da441d409d76b2ac92'
     image: k8s-device-plugin
     tolerations: 
+      {{- range .Values.cluster_policy.tolerations }}
       - key: workload
-        value: {{ .Values.cluster_policy.toleration.label }}
+        value: {{ .label }}
         effect: NoSchedule
+      {{- end }}
     args:
       - '--mig-strategy=single'
       - '--pass-device-specs=true'
@@ -53,9 +57,11 @@ spec:
     version: 'sha256:017d2e2a1bc410e9d2ac116683fc49a6f28e935cadee86e712cc147ea0239469'
     image: driver
     tolerations: 
+      {{- range .Values.cluster_policy.tolerations }}
       - key: workload
-        value: {{ .Values.cluster_policy.toleration.label }}
+        value: {{ .label }}
         effect: NoSchedule
+      {{- end }}
   gfd:
     nodeSelector: {}
     imagePullSecrets: []
@@ -67,9 +73,11 @@ spec:
     version: 'sha256:bfc39d23568458dfd50c0c5323b6d42bdcd038c420fb2a2becd513a3ed3be27f'
     image: gpu-feature-discovery
     tolerations: 
+      {{- range .Values.cluster_policy.tolerations }}
       - key: workload
-        value: {{ .Values.cluster_policy.toleration.label }}
+        value: {{ .label }}
         effect: NoSchedule
+      {{- end }}
     migStrategy: single
     #sleepInterval: 60s
   operator:
@@ -91,6 +99,8 @@ spec:
     version: 'sha256:c91875db54ad5d2a2ed396c8fd15cc666411ff35c58c634680946371d32507ae'
     image: container-toolkit
     tolerations: 
+      {{- range .Values.cluster_policy.tolerations }}
       - key: workload
-        value: {{ .Values.cluster_policy.toleration.label }}
+        value: {{ .label }}
         effect: NoSchedule
+      {{- end }}
