--- a/helm/autoscaler/values.yaml
+++ b/helm/autoscaler/values.yaml
@@ -1,6 +1,9 @@
 cluster_policy:
-  toleration:
-    label: ai-ml
+  tolerations:
+    - label: ai-ml
+    - label: runforever
+  machineconfigs:
+    base64_pem: 
 machinesets:
   infrastructure_id: cluster-0e58-scm6d
   ami_id: ami-010de485a2ee23e5e
@@ -14,6 +17,7 @@ machinesets:
         minReplicas: 1
         maxReplicas: 1
       label: runforever
+      replicas: 1
     - name: p3-2xlarge
       instanceType: p3.2xlarge
       zone: us-west-2a
@@ -23,3 +27,4 @@ machinesets:
         minReplicas: 0
         maxReplicas: 1
       label: ai-ml
+      replicas: 0
