--- a/serving/kfserving/tensorflow/tf-inference.yaml
+++ b/serving/kfserving/tensorflow/tf-inference.yaml
@@ -4,6 +4,8 @@ metadata:
   name: "flowers-sample"
   annotations:
     sidecar.istio.io/inject: "false"
+  labels:
+    workload-type: kfserving  
 spec:
   default:
     predictor:
