--- a/openshift/gpu-machineset.yaml
+++ b/openshift/gpu-machineset.yaml
@@ -22,6 +22,7 @@ spec:
       metadata: 
         labels:
           workload: ${machine_type}
+          cluster-api/accelerator: "true"
       taints:
       - effect: NoSchedule
         key: workload
