--- a/helm/control-plane/templates/servicemeshcontrolplane-basic.yaml
+++ b/helm/control-plane/templates/servicemeshcontrolplane-basic.yaml
@@ -37,10 +37,15 @@ spec:
     grafana:
       enabled: true
   gateways:
+    openshiftRoute:
+      enabled: false
+    ingress:
+      enabled: false
+    egress:
+      enabled: false
     additionalIngress:
       kubeflow:
         enabled: true
-        #namespace: {{ .Values.control_plane.ingress.kubeflow.namespace }}
         volumes:
           - volume:
               secret: 
@@ -69,54 +74,10 @@ spec:
               protocol: TCP
               port: 80
               targetPort: 8080
-            # - name: https
-            #   protocol: TCP
-            #   port: 443
-            #   targetPort: 443
             - name: oauth
               protocol: TCP
               port: 9443
-              targetPort: 9443            
-            # - name: tls
-            #   protocol: TCP
-            #   port: 15443
-            #   targetPort: 15443        
-    ingress:
-      ingress: true
-      # volumes:
-      #   - volume:
-      #       secret: 
-      #         secretName: proxy-tls
-      #     volumeMount:
-      #       name: proxy-tls
-      #       mountPath: /certs
-      #   - volume:
-      #       configMap: 
-      #         name: trusted-ca-bundle 
-      #     volumeMount:
-      #       name: trusted-ca-bundle
-      #       mountPath: /ca-bundle            
-      # service:
-      #   metadata:
-      #     annotations:
-      #       service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
-      #   ports:    
-      #     - name: http2
-      #       protocol: TCP
-      #       port: 80
-      #       targetPort: 8080
-      #     # - name: https
-      #     #   protocol: TCP
-      #     #   port: 443
-      #     #   targetPort: 443
-      #     - name: oauth
-      #       protocol: TCP
-      #       port: 9443
-      #       targetPort: 9443            
-      #     # - name: tls
-      #     #   protocol: TCP
-      #     #   port: 15443
-      #     #   targetPort: 15443
+              targetPort: 9443     
   techPreview:
     gateways:
       kubeflow:
@@ -157,41 +118,4 @@ spec:
               - name: service-ca-bundle
                 mountPath: /service-ca-bundle
               - name: ocp-ca-bundle
-                mountPath: /ocp-ca-bundle                      
-      # istio-ingressgateway:
-      #   additionalContainers:
-      #     - name: oauth2-proxy
-      #       env:
-      #       - name: POD_IP
-      #         valueFrom:
-      #           fieldRef:
-      #             apiVersion: v1
-      #             fieldPath: status.podIP
-      #       args:
-      #         - '-provider=openshift'
-      #         - '-pass-basic-auth=false'
-      #         - '-https-address=:9443'
-      #         - '-http-address='
-      #         - '-email-domain=*'
-      #         - '-upstream=http://$(POD_IP):8080'
-      #         - '-openshift-sar={"namespace":"{{ .Values.control_plane.namespace }}","resource":"pods","verb":"get"}'
-      #         - '-openshift-delegate-urls={"/": {"namespace":"{{ .Values.control_plane.namespace }}","resource":"pods","verb":"get"}}'
-      #         - '-tls-cert=/certs/tls.crt'
-      #         - '-tls-key=/certs/tls.key'
-      #         - '-client-id=kubeflow-istio'
-      #         - '-client-secret=SECRET'
-      #         - '-cookie-secret=SECRET'
-      #         - '-openshift-ca=/ca-bundle/ca-bundle.crt'
-      #         - '-openshift-ca=/ca-bundle/service-ca.crt'
-      #         - '-openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt'               
-      #       image: 'quay.io/openshift/origin-oauth-proxy:4.6'
-      #       imagePullPolicy: Always
-      #       ports:
-      #         - containerPort: 8081
-      #           protocol: TCP
-      #           name: oauth-http
-      #       volumeMounts:
-      #         - name: proxy-tls
-      #           mountPath: /certs
-      #         - name: trusted-ca-bundle
-      #           mountPath: /ca-bundle                
+                mountPath: /ocp-ca-bundle            
