--- a/openshift/sm_cp_patch.yaml
+++ b/openshift/sm_cp_patch.yaml
@@ -34,10 +34,16 @@ spec:
     grafana:
       enabled: true
   gateways:
+    openshiftRoute:
+      enabled: false
+    ingress:
+      enabled: false
+    egress:
+      enabled: false
     additionalIngress:
       kubeflow:
         enabled: true
-        namepsace: ${kubeflow_namespace}
+        namespace: ${kubeflow_namespace}
         volumes:
           - volume:
               secret: 
@@ -66,54 +72,10 @@ spec:
               protocol: TCP
               port: 80
               targetPort: 8080
-            # - name: https
-            #   protocol: TCP
-            #   port: 443
-            #   targetPort: 443
             - name: oauth
               protocol: TCP
               port: 9443
-              targetPort: 9443            
-            # - name: tls
-            #   protocol: TCP
-            #   port: 15443
-            #   targetPort: 15443        
-    ingress:
-      ingress: true
-      # volumes:
-      #   - volume:
-      #       secret: 
-      #         secretName: proxy-tls
-      #     volumeMount:
-      #       name: proxy-tls
-      #       mountPath: /certs
-      #   - volume:
-      #       configMap: 
-      #         name: trusted-ca-bundle 
-      #     volumeMount:
-      #       name: trusted-ca-bundle
-      #       mountPath: /ca-bundle            
-      # service:
-      #   metadata:
-      #     annotations:
-      #       service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
-      #   ports:    
-      #     - name: http2
-      #       protocol: TCP
-      #       port: 80
-      #       targetPort: 8080
-      #     # - name: https
-      #     #   protocol: TCP
-      #     #   port: 443
-      #     #   targetPort: 443
-      #     - name: oauth
-      #       protocol: TCP
-      #       port: 9443
-      #       targetPort: 9443            
-      #     # - name: tls
-      #     #   protocol: TCP
-      #     #   port: 15443
-      #     #   targetPort: 15443
+              targetPort: 9443
   techPreview:
     gateways:
       kubeflow:
@@ -154,44 +116,7 @@ spec:
               - name: service-ca-bundle
                 mountPath: /service-ca-bundle
               - name: ocp-ca-bundle
-                mountPath: /ocp-ca-bundle                      
-      # istio-ingressgateway:
-      #   additionalContainers:
-      #     - name: oauth2-proxy
-      #       env:
-      #       - name: POD_IP
-      #         valueFrom:
-      #           fieldRef:
-      #             apiVersion: v1
-      #             fieldPath: status.podIP
-      #       args:
-      #         - '-provider=openshift'
-      #         - '-pass-basic-auth=false'
-      #         - '-https-address=:9443'
-      #         - '-http-address='
-      #         - '-email-domain=*'
-      #         - '-upstream=http://$(POD_IP):8080'
-      #         - '-openshift-sar={"namespace":"${sm_cp_namespace}","resource":"pods","verb":"get"}'
-      #         - '-openshift-delegate-urls={"/": {"namespace":"${sm_cp_namespace}","resource":"pods","verb":"get"}}'
-      #         - '-tls-cert=/certs/tls.crt'
-      #         - '-tls-key=/certs/tls.key'
-      #         - '-client-id=kubeflow-istio'
-      #         - '-client-secret=SECRET'
-      #         - '-cookie-secret=SECRET'
-      #         - '-openshift-ca=/ca-bundle/ca-bundle.crt'
-      #         - '-openshift-ca=/ca-bundle/service-ca.crt'
-      #         - '-openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt'               
-      #       image: 'quay.io/openshift/origin-oauth-proxy:4.6'
-      #       imagePullPolicy: Always
-      #       ports:
-      #         - containerPort: 8081
-      #           protocol: TCP
-      #           name: oauth-http
-      #       volumeMounts:
-      #         - name: proxy-tls
-      #           mountPath: /certs
-      #         - name: trusted-ca-bundle
-      #           mountPath: /ca-bundle                
+                mountPath: /ocp-ca-bundle         
 ---
 kind: OAuthClient
 apiVersion: oauth.openshift.io/v1
@@ -202,15 +127,6 @@ redirectURIs:
  - "https://kubeflow.apps.${base_domain}" 
 grantMethod: auto 
 ---
-# kind: ConfigMap
-# apiVersion: v1
-# metadata:
-#   name: trusted-ca-bundle
-#   annotations:
-#     service.alpha.openshift.io/inject-cabundle: 'true'
-#   labels:
-#     config.openshift.io/inject-trusted-cabundle: "true"
----
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -218,21 +134,6 @@ metadata:
   namespace: ${sm_cp_namespace}
   annotations:
     service.alpha.openshift.io/inject-cabundle: 'true'       
----
-# apiVersion: route.openshift.io/v1
-# kind: Route
-# metadata:
-#   name: secure-kubeflow
-# spec:
-#   host: kubeflow.apps.${base_domain}
-#   port:
-#     targetPort: 9443
-#   tls:
-#     insecureEdgeTerminationPolicy: Redirect
-#     termination: reencrypt
-#   to:
-#     kind: Service
-#     name: istio-ingressgateway
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
